--- a/untitled/Menü.html
+++ b/untitled/Menü.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Menü</title>
@@ -9,10 +9,12 @@
 
 <div class="topnav">
     <a class="active" href="Menü.html">Home</a>
+    <a href="meinetickets.html">meine Tickets</a>
     <a href="Freunde%20finden.html">Freunde finden</a>
     <a href="Pin.html">Pin setzen</a>
     <a href="Fotos%20hinzufügen.html">Fotos </a>
     <a href="#Hilfe">Hilfe</a>
+
 </div>
 
 </body>
