--- a/untitled/index.html
+++ b/untitled/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <link rel="stylesheet" href="übergreifendes%20css.css">
     <meta charset="UTF-8">
