--- a/untitled/ticket.html
+++ b/untitled/ticket.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Ticket1</title>
@@ -10,9 +10,9 @@
 <div id="Optionen" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="meinetickets.html">zurueck zur Ticketuebersicht</a>
-    <a href="menue.html">Land freirubbeln</a>
-    <a href="menue.html">Flugroute einzeichnen</a>
-    <a href="menue.html">Home</a>
+    <a href="Menü.html">Land freirubbeln</a>
+    <a href="Menü.html">Flugroute einzeichnen</a>
+    <a href="Menü.html">Home</a>
 </div>
 
 <img src= "https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwjOtuqagMLlAhVBalAKHTGjAgIQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.fairplane.de%2Fratgeber%2Fbordkarten-entschlusseln-dafur-stehen-die-abkurzungen-auf-ihrem-flugticket%2F&psig=AOvVaw1seBmpnbsNDEElLmKjZ8Pa&ust=1572456785191474" width="500" height="333">
