Menü, Formatierung, Help, Profile, Login, Logout

--- a/Flugapp/index.html
+++ b/Flugapp/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <link rel="stylesheet" href="übergreifendes%20css.css">
+    <link rel="stylesheet" href="main_css.css">
     <meta charset="UTF-8">
     <title>Startseite</title>
-
 </head>
 <body>
 <header><h1>Travelmap</h1></header>
-
 <div class="topnav">
     <a class="active" href="index.html">Home</a>
-    <a href="Login.html">Login</a>
-    <a href="#Reise finden">Reise finden</a>
-    <a href="#Hilfe">Hilfe</a>
+    <a href="login.html">Login</a>
+    <a href="help.html">Hilfe</a>
 </div>
-
 </body>
 </html>
