--- a/Flugapp/pin.html
+++ b/Flugapp/pin.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Pin setzen</title>
-    <link rel="stylesheet" href="übergreifendes%20css.css">
-    <link rel="stylesheet" href="Pin.css">
+    <link rel="stylesheet" href="main_css.css">
+    <link rel="stylesheet" href="pin.css">
 </head>
 <body>
 <div class="topnav">
-    <a class="active" href="Menü.html">Home</a>
-    <a href="Freunde%20finden.html">Freunde finden</a>
-    <a href="Pin.html">Pin setzen</a>
-    <a href="Fotos%20hinzufügen.html">Fotos </a>
-    <a href="#Hilfe">Hilfe</a>
+    <a class="active" href="menu.html">Home</a>
+    <a href="findFriends.html">Freunde finden</a>
+    <a href="pin.html">Pin setzen</a>
+    <a href="addFoto.html">Fotos </a>
+    <a href="help.html">Hilfe</a>
+    <a href="profile.html">Profil</a>
+    <a href="index.html">Logout</a>
 </div>
 
 <header><h1>Länder suchen</h1></header>
