--- a/Flugapp/ticketladen.html
+++ b/Flugapp/ticketladen.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Ticket hinzufuegen</title>
+    <title>Ticket hinzufügen</title>
 </head>
 <body>
 <p><font face="Arial, Helvetica, sans-serif" size="6">Ticket hinzufuegen </font></p>
